--- a/خلاصه-1984-جورج-اورول/index.html
+++ b/خلاصه-1984-جورج-اورول/index.html
@@ -163,7 +163,7 @@
     <textarea rows="4" required="required" name="fields[msg]"></textarea>
     <input type="submit" value="ارسال نظر" />
    </form>
-  </div><div class="pagination"><span class="pagination-nonlink half-width"> ‌ </span><a href="http://asadiweb.ir/%D9%85%D9%87%D8%A7%D8%AC%D8%B1%D8%AA-%DA%A9%D8%B1%D9%88%D9%85-%D9%81%D8%A7%DB%8C%D8%B1%D9%81%D8%A7%DA%A9%D8%B3/" class="half-width" title="مهاجرت از کروم به فایرفاکس">مهاجرت از کروم به فایرفاکس ←</a></div>
+  </div><div class="pagination"><a href="http://asadiweb.ir/%D8%B4%D8%A7%D8%BA%D9%84-%DB%8C%D8%A7-%D8%A8%DB%8C%DA%A9%D8%A7%D8%B1/" class="half-width" title="بیکاری یا شغل تمام وقت؟ مسئله این نیست!">→ بیکاری یا شغل تمام وقت؟ مسئله این نیست!</a><a href="http://asadiweb.ir/%D9%85%D9%87%D8%A7%D8%AC%D8%B1%D8%AA-%DA%A9%D8%B1%D9%88%D9%85-%D9%81%D8%A7%DB%8C%D8%B1%D9%81%D8%A7%DA%A9%D8%B3/" class="half-width" title="مهاجرت از کروم به فایرفاکس">مهاجرت از کروم به فایرفاکس ←</a></div>
   <script>
   document.getElementById("hidden-useragent").value=navigator.userAgent;
   if(getParameterByName("sendComment") == "true"){
