--- a/کتاب-۴۰-فکر-سمی/index.html
+++ b/کتاب-۴۰-فکر-سمی/index.html
@@ -720,11 +720,11 @@
    </div>
   <div class="related-posts">
 	<h3>مطالب مرتبط</h3>
-	<ul><li><a href="/%D8%AA%D8%A8%D8%B1%DB%8C%DA%A9-%D8%B3%D8%A7%D9%84-%DB%B1%DB%B3%DB%B9%DB%B6-%D8%AE%D9%88%D8%B1%D8%B4%DB%8C%D8%AF%DB%8C/" title="تبریک فرارسیدن نوروز و آغاز سال ۱۳۹۶ خورشیدی">تبریک فرارسیدن نوروز و آغاز سال ۱۳۹۶ خورشیدی</a></li> 
+	<ul><li><a href="/%D8%B4%D8%A7%D8%BA%D9%84-%DB%8C%D8%A7-%D8%A8%DB%8C%DA%A9%D8%A7%D8%B1/" title="بیکاری یا شغل تمام وقت؟ مسئله این نیست!">بیکاری یا شغل تمام وقت؟ مسئله این نیست!</a></li> 
+	  	<li><a href="/%D8%AA%D8%A8%D8%B1%DB%8C%DA%A9-%D8%B3%D8%A7%D9%84-%DB%B1%DB%B3%DB%B9%DB%B6-%D8%AE%D9%88%D8%B1%D8%B4%DB%8C%D8%AF%DB%8C/" title="تبریک فرارسیدن نوروز و آغاز سال ۱۳۹۶ خورشیدی">تبریک فرارسیدن نوروز و آغاز سال ۱۳۹۶ خورشیدی</a></li> 
 	  	<li><a href="/%D8%A8%D9%88%DB%8C-%D9%BE%D8%A7%DB%8C%DB%8C%D8%B2/" title="بوی پاییز">بوی پاییز</a></li> 
 	  	<li><a href="/%D8%AA%D8%A8%D8%B1%DB%8C%DA%A9-%D8%B3%D8%A7%D9%84-%DB%B1%DB%B3%DB%B9%DB%B5-%D8%AE%D9%88%D8%B1%D8%B4%DB%8C%D8%AF%DB%8C/" title="تبریک فرارسیدن نوروز و آغاز سال ۱۳۹۵ خورشیدی">تبریک فرارسیدن نوروز و آغاز سال ۱۳۹۵ خورشیدی</a></li> 
 	  	<li><a href="/%DB%B2%DB%B5-%D8%B3%D8%A7%D9%84%DA%AF%DB%8C/" title="۲۵ سالگی">۲۵ سالگی</a></li> 
-	  	<li><a href="/%D8%AA%D8%A8%D8%B1%DB%8C%DA%A9-%D8%B3%D8%A7%D9%84-1393-%D8%AE%D9%88%D8%B1%D8%B4%DB%8C%D8%AF%DB%8C/" title="تبریک سال ۱۳۹۳">تبریک سال ۱۳۹۳</a></li> 
 	  	</ul> 
   </div><h3>نظرات</h3><hr/><div class="comment-list">
 	  <div class="comment-avatar">
