--- a/خجالت-کشیدم/index.html
+++ b/خجالت-کشیدم/index.html
@@ -125,7 +125,7 @@
     <textarea rows="4" required="required" name="fields[msg]"></textarea>
     <input type="submit" value="ارسال نظر" />
    </form>
-  </div><div class="pagination"><span class="pagination-nonlink half-width"> ‌ </span><a href="http://asadiweb.ir/%D8%B4%D8%A7%D8%BA%D9%84-%DB%8C%D8%A7-%D8%A8%DB%8C%DA%A9%D8%A7%D8%B1/" class="half-width" title="بیکاری یا شغل تمام وقت؟ مسئله این نیست!">بیکاری یا شغل تمام وقت؟ مسئله این نیست! ←</a></div>
+  </div><div class="pagination"><a href="http://asadiweb.ir/%D8%B9%D9%82%D8%A7%DB%8C%D8%AF-%DB%8C%DA%A9-%D8%AF%D9%84%D9%82%DA%A9/" class="half-width" title="خلاصه رمان عقاید یک دلقک اثر هاینریش بل">→ خلاصه رمان عقاید یک دلقک اثر هاینریش بل</a><a href="http://asadiweb.ir/%D8%B4%D8%A7%D8%BA%D9%84-%DB%8C%D8%A7-%D8%A8%DB%8C%DA%A9%D8%A7%D8%B1/" class="half-width" title="بیکاری یا شغل تمام وقت؟ مسئله این نیست!">بیکاری یا شغل تمام وقت؟ مسئله این نیست! ←</a></div>
   <script>
   document.getElementById("hidden-useragent").value=navigator.userAgent;
   if(getParameterByName("sendComment") == "true"){
