--- a/عقاید-یک-دلقک/index.html
+++ b/عقاید-یک-دلقک/index.html
@@ -157,7 +157,7 @@
     <textarea rows="4" required="required" name="fields[msg]"></textarea>
     <input type="submit" value="ارسال نظر" />
    </form>
-  </div><div class="pagination"><span class="pagination-nonlink half-width"> ‌ </span><a href="http://asadiweb.ir/%D8%AE%D8%AC%D8%A7%D9%84%D8%AA-%DA%A9%D8%B4%DB%8C%D8%AF%D9%85/" class="half-width" title="کمی خجالت کشیدم…">کمی خجالت کشیدم… ←</a></div>
+  </div><div class="pagination"><a href="http://asadiweb.ir/NamedQuery-xml-annotation/" class="half-width" title="استفاده از NamedQuery به دو صورت XML و annotation">→ استفاده از NamedQuery به دو صورت XML و annotation</a><a href="http://asadiweb.ir/%D8%AE%D8%AC%D8%A7%D9%84%D8%AA-%DA%A9%D8%B4%DB%8C%D8%AF%D9%85/" class="half-width" title="کمی خجالت کشیدم…">کمی خجالت کشیدم… ←</a></div>
   <script>
   document.getElementById("hidden-useragent").value=navigator.userAgent;
   if(getParameterByName("sendComment") == "true"){
