--- a/تغییر-jdbcUrl-برای-پشتیبانی-از-utf-8-در-MySql/index.html
+++ b/تغییر-jdbcUrl-برای-پشتیبانی-از-utf-8-در-MySql/index.html
@@ -121,11 +121,11 @@ jdbc.url=jdbc\:mysql\://localhost\:3306/نام دیتابیس موردنظر?zer
    </div>
   <div class="related-posts">
 	<h3>مطالب مرتبط</h3>
-	<ul><li><a href="/%D9%85%D8%AA%D8%BA%DB%8C%D8%B1-final-%D8%B9%D8%A8%D8%A7%D8%B1%D8%AA-%D9%84%D8%A7%D9%85%D8%A8%D8%AF%D8%A7-%D8%AC%D8%A7%D9%88%D8%A7-8/" title="استفاده از متغیر final در عبارت‌های لامبدا جاوا 8">استفاده از متغیر final در عبارت‌های لامبدا جاوا 8</a></li> 
+	<ul><li><a href="/NamedQuery-xml-annotation/" title="استفاده از NamedQuery به دو صورت XML و annotation">استفاده از NamedQuery به دو صورت XML و annotation</a></li> 
+	  	<li><a href="/%D9%85%D8%AA%D8%BA%DB%8C%D8%B1-final-%D8%B9%D8%A8%D8%A7%D8%B1%D8%AA-%D9%84%D8%A7%D9%85%D8%A8%D8%AF%D8%A7-%D8%AC%D8%A7%D9%88%D8%A7-8/" title="استفاده از متغیر final در عبارت‌های لامبدا جاوا 8">استفاده از متغیر final در عبارت‌های لامبدا جاوا 8</a></li> 
 	  	<li><a href="/%D8%A2%D9%85%D9%88%D8%B2%D8%B4-form-scaner-%D9%81%D8%B1%DB%8C%D9%85-%D9%88%D8%B1%DA%A9-%D8%A7%D8%B3%D9%BE%D8%B1%DB%8C%D9%86%DA%AF/" title="آموزش کار با formScanner در فریم‌ورک اسپرینگ">آموزش کار با formScanner در فریم‌ورک اسپرینگ</a></li> 
 	  	<li><a href="/%D9%BE%DB%8C%D8%A7%D8%AF%D9%87-%D8%B3%D8%A7%D8%B2%DB%8C-%D8%AD%D9%84%D9%82%D9%87-%D9%87%D8%A7%DB%8C-%D8%AA%D9%88%D8%AF%D8%B1%D8%AA%D9%88-%D8%A8%D8%A7-%D8%A7%D8%B3%D8%AA%D9%81%D8%A7/" title="پیاده‌سازی حلقه‌های تودرتو با استفاده از لامبدا در جاوا ۸">پیاده‌سازی حلقه‌های تودرتو با استفاده از لامبدا در جاوا ۸</a></li> 
 	  	<li><a href="/%D9%85%D8%B9%D8%A7%D8%AF%D9%84-%D9%85%D8%AA%D8%AF-contains-%D8%AF%D8%B1-%D8%AC%D8%A7%D9%88%D8%A7-%DB%B8/" title="معادل متد contains در جاوا ۸">معادل متد contains در جاوا ۸</a></li> 
-	  	<li><a href="/%D8%A7%D8%B1%D8%AB-%D8%A8%D8%B1%DB%8C-%D8%AF%D8%B1-%D8%AC%D8%A7%D9%88%D8%A7/" title="ارث بری در جاوا">ارث بری در جاوا</a></li> 
 	  	</ul> 
   </div><div class="comment-form">
    <form id="comment-form" method="post" action="http://staticman3.herokuapp.com/v2/entry/asadise/my-blog/master/comments">
