--- a/NamedQuery-xml-annotation/index.html
+++ b/NamedQuery-xml-annotation/index.html
@@ -170,7 +170,7 @@
     <textarea rows="4" required="required" name="fields[msg]"></textarea>
     <input type="submit" value="ارسال نظر" />
    </form>
-  </div><div class="pagination"><span class="pagination-nonlink half-width"> ‌ </span><a href="http://asadiweb.ir/%D8%B9%D9%82%D8%A7%DB%8C%D8%AF-%DB%8C%DA%A9-%D8%AF%D9%84%D9%82%DA%A9/" class="half-width" title="خلاصه رمان عقاید یک دلقک اثر هاینریش بل">خلاصه رمان عقاید یک دلقک اثر هاینریش بل ←</a></div>
+  </div><div class="pagination"><a href="http://asadiweb.ir/%D8%A7%D8%B6%D8%A7%D9%81%D9%87-%DA%A9%D8%B1%D8%AF%D9%86-%D8%AA%D9%82%D9%88%DB%8C%D9%85-%D8%B4%D9%85%D8%B3%DB%8C-%D8%A8%D9%87-%D8%AA%D9%82%D9%88%DB%8C%D9%85-%DA%AF%D9%88%D8%B4%DB%8C-%D8%A7%D9%86%D8%AF%D8%B1%D9%88%DB%8C%D8%AF%DB%8C/" class="half-width" title="آموزش اضافه کردن تقویم شمسی سال 1399 به تقویم میلادی گوشی‌های اندرویدی">→ آموزش اضافه کردن تقویم شمسی سال 1399 به تقویم میلادی گوشی‌های اندرویدی</a><a href="http://asadiweb.ir/%D8%B9%D9%82%D8%A7%DB%8C%D8%AF-%DB%8C%DA%A9-%D8%AF%D9%84%D9%82%DA%A9/" class="half-width" title="خلاصه رمان عقاید یک دلقک اثر هاینریش بل">خلاصه رمان عقاید یک دلقک اثر هاینریش بل ←</a></div>
   <script>
   document.getElementById("hidden-useragent").value=navigator.userAgent;
   if(getParameterByName("sendComment") == "true"){
