--- a/اضافه-کردن-تقویم-شمسی-به-تقویم-گوشی-اندرویدی/index.html
+++ b/اضافه-کردن-تقویم-شمسی-به-تقویم-گوشی-اندرویدی/index.html
@@ -92,9 +92,11 @@
   <li>از آنجایی که این تقویم را در سه نسخه تهیه کرده‌ام؛ ابتدا بر روی هر کدام از نسخه‌ها که فکر می‌کنید برای شما مناسب است کلیک کنید:</li>
 </ul>
 
-<p><strong><a href="https://calendar.google.com/calendar/embed?src=2fbipn4ked5p9h7jrjpjjj8qn4%40group.calendar.google.com&amp;ctz=Asia%2FTehran" target="_blank">تقویم هجری شمسی سال 1399 برای Google Calendar</a></strong>
-<strong><a href="https://calendar.google.com/calendar/embed?src=aetlrnvpf6tk2dhc7ijk50p8r8%40group.calendar.google.com&amp;ctz=Asia%2FTehran" target="_blank">تقویم کوتاه سال ١٣٩٩ (روز و ماه)</a></strong>
-<strong><a href="https://calendar.google.com/calendar/embed?src=rp8lfm47korun21j0stor4ckfk%40group.calendar.google.com&amp;ctz=Asia%2FTehran" target="_blank"> تقویم کوتاه سال ١٣٩٩ (روز) </a></strong></p>
+<p><strong><a href="https://calendar.google.com/calendar/embed?src=2fbipn4ked5p9h7jrjpjjj8qn4%40group.calendar.google.com&amp;ctz=Asia%2FTehran" target="_blank">تقویم کامل سال ۱۳۹۹ (شامل روز هفته، روز، ماه و سال)</a></strong></p>
+
+<p><strong><a href="https://calendar.google.com/calendar/embed?src=aetlrnvpf6tk2dhc7ijk50p8r8%40group.calendar.google.com&amp;ctz=Asia%2FTehran" target="_blank">تقویم کوتاه سال ١٣٩٩ (روز و ماه)</a></strong></p>
+
+<p><strong><a href="https://calendar.google.com/calendar/embed?src=rp8lfm47korun21j0stor4ckfk%40group.calendar.google.com&amp;ctz=Asia%2FTehran" target="_blank"> تقویم کوتاه سال ١٣٩٩ (روز) </a></strong></p>
 
 <ul>
   <li>حال تقویم شمسی باید همانند یکی از تصاویر زیر برای شما نمایش داده شود:</li>
