--- a/اضافه-کردن-تقویم-شمسی-به-تقویم-گوشی-اندرویدی/index.html
+++ b/اضافه-کردن-تقویم-شمسی-به-تقویم-گوشی-اندرویدی/index.html
@@ -302,7 +302,7 @@ https://calendar.google.com/calendar/embed?src=calendar.persian%40gmail.com&ctz=
     <textarea rows="4" required="required" name="fields[msg]"></textarea>
     <input type="submit" value="ارسال نظر" />
    </form>
-  </div><div class="pagination"><span class="pagination-nonlink half-width"> ‌ </span><a href="http://asadiweb.ir/NamedQuery-xml-annotation/" class="half-width" title="استفاده از NamedQuery به دو صورت XML و annotation">استفاده از NamedQuery به دو صورت XML و annotation ←</a></div>
+  </div><div class="pagination"><a href="http://asadiweb.ir/%D9%86%D9%82%D8%AF-%D9%81%DB%8C%D9%84%D9%85-%D9%BE%D9%84%D8%AA%D9%81%D8%B1%D9%85/" class="half-width" title="نقد و بررسی فیلم پلتفرم (The Platform)">→ نقد و بررسی فیلم پلتفرم (The Platform)</a><a href="http://asadiweb.ir/NamedQuery-xml-annotation/" class="half-width" title="استفاده از NamedQuery به دو صورت XML و annotation">استفاده از NamedQuery به دو صورت XML و annotation ←</a></div>
   <script>
   document.getElementById("hidden-useragent").value=navigator.userAgent;
   if(getParameterByName("sendComment") == "true"){
