--- a/آموزش-جاوا-اسکریپت-استفاده-از-sweetAlert/index.html
+++ b/آموزش-جاوا-اسکریپت-استفاده-از-sweetAlert/index.html
@@ -155,11 +155,11 @@
    </div>
   <div class="related-posts">
 	<h3>مطالب مرتبط</h3>
-	<ul><li><a href="/NamedQuery-xml-annotation/" title="استفاده از NamedQuery به دو صورت XML و annotation">استفاده از NamedQuery به دو صورت XML و annotation</a></li> 
+	<ul><li><a href="/%D8%AA%D9%88%DB%8C%DB%8C%D8%AA%D8%B1-%D8%A8%D8%AF%D9%88%D9%86-%D9%81%DB%8C%D9%84%D8%AA%D8%B1/" title="تبدیل لیست توییتر به یک صفحه HTML">تبدیل لیست توییتر به یک صفحه HTML</a></li> 
+	  	<li><a href="/NamedQuery-xml-annotation/" title="استفاده از NamedQuery به دو صورت XML و annotation">استفاده از NamedQuery به دو صورت XML و annotation</a></li> 
 	  	<li><a href="/%D8%AD%D8%B0%D9%81-%D9%86%D8%AA%D8%A7%DB%8C%D8%AC-%D8%AA%DA%A9%D8%B1%D8%A7%D8%B1%DB%8C-%DA%A9%D9%88%D8%A6%D8%B1%DB%8C-sql/" title="حذف نتایج تکراری (بدون در نظر گرفتن ترتیب) از یک کوئری SQL">حذف نتایج تکراری (بدون در نظر گرفتن ترتیب) از یک کوئری SQL</a></li> 
 	  	<li><a href="/%D9%85%D8%AA%D8%BA%DB%8C%D8%B1-final-%D8%B9%D8%A8%D8%A7%D8%B1%D8%AA-%D9%84%D8%A7%D9%85%D8%A8%D8%AF%D8%A7-%D8%AC%D8%A7%D9%88%D8%A7-8/" title="استفاده از متغیر final در عبارت‌های لامبدا جاوا 8">استفاده از متغیر final در عبارت‌های لامبدا جاوا 8</a></li> 
 	  	<li><a href="/%D8%A2%D9%85%D9%88%D8%B2%D8%B4-form-scaner-%D9%81%D8%B1%DB%8C%D9%85-%D9%88%D8%B1%DA%A9-%D8%A7%D8%B3%D9%BE%D8%B1%DB%8C%D9%86%DA%AF/" title="آموزش کار با formScanner در فریم‌ورک اسپرینگ">آموزش کار با formScanner در فریم‌ورک اسپرینگ</a></li> 
-	  	<li><a href="/%D8%A2%D9%85%D9%88%D8%B2%D8%B4-%D8%AC%DB%8C-%DA%A9%D9%88%D8%A6%D8%B1%DB%8C-deselect-radio-input/" title="آموزش جی کوئری: امکان Deselect کردن یک radio input با استفاده از جی کوئری">آموزش جی کوئری: امکان Deselect کردن یک radio input با استفاده از جی کوئری</a></li> 
 	  	</ul> 
   </div><h3>نظرات</h3><hr/><div class="comment-list">
 	  <div class="comment-avatar">
