--- a/توییتر-بدون-فیلتر/index.html
+++ b/توییتر-بدون-فیلتر/index.html
@@ -89,8 +89,9 @@
 
 <p class="center"><img src="/images/twitter-into-html.jpg" alt="توییتر بدون فیلتر" title="توییتر بدون فیلتر" /></p>
 
-<p><strong>گام اول: ایجاد یک لیست در توییتر</strong>
-ساخت لیست در توییتر خیلی ساده است،‌ کافی است از منوی کناری به گزینه List (یا فهرست‌ها) بروید و یک لیست عمومی جدید با یک نام بسازید،‌ و از اکانت‌هایی که می‌خواهید به آن عضو اضافه کنید. لیست شما به آدرس یکتای زیر در دسترس است:</p>
+<p><strong>گام اول: ایجاد یک لیست در توییتر</strong></p>
+
+<p>ساخت لیست در توییتر خیلی ساده است،‌ کافی است از منوی کناری به گزینه List (یا فهرست‌ها) بروید و یک لیست عمومی جدید با یک نام بسازید،‌ و از اکانت‌هایی که می‌خواهید به آن عضو اضافه کنید. لیست شما به آدرس یکتای زیر در دسترس است:</p>
 
 <blockquote>
   <p>https://twitter.com/{your-username}/lists/{your-list-name}</p>
