--- a/افزودن-یک-عبارت-به-انتهای-چندین-خطوط-با/index.html
+++ b/افزودن-یک-عبارت-به-انتهای-چندین-خطوط-با/index.html
@@ -122,7 +122,7 @@
    </div>
   <div class="related-posts">
 	<h3>مطالب مرتبط</h3>
-	<ul><li><a href="/job-class-cannot-be-NULL-%D8%B1%D9%81%D8%B9-%D8%AE%D8%B7%D8%A7%DB%8C/" title="ORA-2745 job class cannot be NULL رفع خطای">ORA-2745 job class cannot be NULL رفع خطای</a></li> 
+	<ul><li><a href="/job-class-cannot-be-NULL-%D8%B1%D9%81%D8%B9-%D8%AE%D8%B7%D8%A7%DB%8C/" title="رفع خطای ORA-2745 job class cannot be NULL">رفع خطای ORA-2745 job class cannot be NULL</a></li> 
 	  	<li><a href="/%D8%AA%D9%88%DB%8C%DB%8C%D8%AA%D8%B1-%D8%A8%D8%AF%D9%88%D9%86-%D9%81%DB%8C%D9%84%D8%AA%D8%B1/" title="تبدیل لیست توییتر به یک صفحه HTML">تبدیل لیست توییتر به یک صفحه HTML</a></li> 
 	  	<li><a href="/NamedQuery-xml-annotation/" title="استفاده از NamedQuery به دو صورت XML و annotation">استفاده از NamedQuery به دو صورت XML و annotation</a></li> 
 	  	<li><a href="/%D8%AD%D8%B0%D9%81-%D9%86%D8%AA%D8%A7%DB%8C%D8%AC-%D8%AA%DA%A9%D8%B1%D8%A7%D8%B1%DB%8C-%DA%A9%D9%88%D8%A6%D8%B1%DB%8C-sql/" title="حذف نتایج تکراری (بدون در نظر گرفتن ترتیب) از یک کوئری SQL">حذف نتایج تکراری (بدون در نظر گرفتن ترتیب) از یک کوئری SQL</a></li> 
