--- a/توییتر-بدون-فیلتر/index.html
+++ b/توییتر-بدون-فیلتر/index.html
@@ -154,7 +154,7 @@
    </div>
   <div class="related-posts">
 	<h3>مطالب مرتبط</h3>
-	<ul><li><a href="/job-class-cannot-be-NULL-%D8%B1%D9%81%D8%B9-%D8%AE%D8%B7%D8%A7%DB%8C/" title="ORA-2745 job class cannot be NULL رفع خطای">ORA-2745 job class cannot be NULL رفع خطای</a></li> 
+	<ul><li><a href="/job-class-cannot-be-NULL-%D8%B1%D9%81%D8%B9-%D8%AE%D8%B7%D8%A7%DB%8C/" title="رفع خطای ORA-2745 job class cannot be NULL">رفع خطای ORA-2745 job class cannot be NULL</a></li> 
 	  	<li><a href="/NamedQuery-xml-annotation/" title="استفاده از NamedQuery به دو صورت XML و annotation">استفاده از NamedQuery به دو صورت XML و annotation</a></li> 
 	  	<li><a href="/%D8%AD%D8%B0%D9%81-%D9%86%D8%AA%D8%A7%DB%8C%D8%AC-%D8%AA%DA%A9%D8%B1%D8%A7%D8%B1%DB%8C-%DA%A9%D9%88%D8%A6%D8%B1%DB%8C-sql/" title="حذف نتایج تکراری (بدون در نظر گرفتن ترتیب) از یک کوئری SQL">حذف نتایج تکراری (بدون در نظر گرفتن ترتیب) از یک کوئری SQL</a></li> 
 	  	<li><a href="/%D9%85%D8%AA%D8%BA%DB%8C%D8%B1-final-%D8%B9%D8%A8%D8%A7%D8%B1%D8%AA-%D9%84%D8%A7%D9%85%D8%A8%D8%AF%D8%A7-%D8%AC%D8%A7%D9%88%D8%A7-8/" title="استفاده از متغیر final در عبارت‌های لامبدا جاوا 8">استفاده از متغیر final در عبارت‌های لامبدا جاوا 8</a></li> 
@@ -174,7 +174,7 @@
     <textarea rows="4" required="required" name="fields[msg]"></textarea>
     <input type="submit" value="ارسال نظر" />
    </form>
-  </div><div class="pagination"><a href="http://asadiweb.ir/job-class-cannot-be-NULL-%D8%B1%D9%81%D8%B9-%D8%AE%D8%B7%D8%A7%DB%8C/" class="half-width" title="ORA-2745 job class cannot be NULL رفع خطای">→ ORA-2745 job class cannot be NULL رفع خطای</a><a href="http://asadiweb.ir/%D9%86%D9%82%D8%AF-%D9%81%DB%8C%D9%84%D9%85-%D9%BE%D9%84%D8%AA%D9%81%D8%B1%D9%85/" class="half-width" title="نقد و بررسی فیلم پلتفرم (The Platform)">نقد و بررسی فیلم پلتفرم (The Platform) ←</a></div>
+  </div><div class="pagination"><a href="http://asadiweb.ir/job-class-cannot-be-NULL-%D8%B1%D9%81%D8%B9-%D8%AE%D8%B7%D8%A7%DB%8C/" class="half-width" title="رفع خطای ORA-2745 job class cannot be NULL">→ رفع خطای ORA-2745 job class cannot be NULL</a><a href="http://asadiweb.ir/%D9%86%D9%82%D8%AF-%D9%81%DB%8C%D9%84%D9%85-%D9%BE%D9%84%D8%AA%D9%81%D8%B1%D9%85/" class="half-width" title="نقد و بررسی فیلم پلتفرم (The Platform)">نقد و بررسی فیلم پلتفرم (The Platform) ←</a></div>
   <script>
   document.getElementById("hidden-useragent").value=navigator.userAgent;
   if(getParameterByName("sendComment") == "true"){
