--- a/حذف-نتایج-تکراری-کوئری-sql/index.html
+++ b/حذف-نتایج-تکراری-کوئری-sql/index.html
@@ -152,7 +152,7 @@
    </div>
   <div class="related-posts">
 	<h3>مطالب مرتبط</h3>
-	<ul><li><a href="/job-class-cannot-be-NULL-%D8%B1%D9%81%D8%B9-%D8%AE%D8%B7%D8%A7%DB%8C/" title="ORA-2745 job class cannot be NULL رفع خطای">ORA-2745 job class cannot be NULL رفع خطای</a></li> 
+	<ul><li><a href="/job-class-cannot-be-NULL-%D8%B1%D9%81%D8%B9-%D8%AE%D8%B7%D8%A7%DB%8C/" title="رفع خطای ORA-2745 job class cannot be NULL">رفع خطای ORA-2745 job class cannot be NULL</a></li> 
 	  	<li><a href="/%D8%AA%D9%88%DB%8C%DB%8C%D8%AA%D8%B1-%D8%A8%D8%AF%D9%88%D9%86-%D9%81%DB%8C%D9%84%D8%AA%D8%B1/" title="تبدیل لیست توییتر به یک صفحه HTML">تبدیل لیست توییتر به یک صفحه HTML</a></li> 
 	  	<li><a href="/NamedQuery-xml-annotation/" title="استفاده از NamedQuery به دو صورت XML و annotation">استفاده از NamedQuery به دو صورت XML و annotation</a></li> 
 	  	<li><a href="/%D9%85%D8%AA%D8%BA%DB%8C%D8%B1-final-%D8%B9%D8%A8%D8%A7%D8%B1%D8%AA-%D9%84%D8%A7%D9%85%D8%A8%D8%AF%D8%A7-%D8%AC%D8%A7%D9%88%D8%A7-8/" title="استفاده از متغیر final در عبارت‌های لامبدا جاوا 8">استفاده از متغیر final در عبارت‌های لامبدا جاوا 8</a></li> 
