--- a/اضافه-کردن-تقویم-شمسی-به-تقویم-گوشی-اندرویدی/index.html
+++ b/اضافه-کردن-تقویم-شمسی-به-تقویم-گوشی-اندرویدی/index.html
@@ -89,7 +89,7 @@
 
 <p>برای اضافه کردن تقویم شمسی به تقویم گوگل مراحل زیر را دنبال کنید:</p>
 <ul>
-  <li>از آنجایی که این تقویم را در سه نسخه تهیه کرده‌ام؛ ابتدا بر روی هر کدام از نسخه‌ها که فکر می‌کنید برای شما مناسب است کلیک کنید:</li>
+  <li>از آنجایی که این تقویم را در پنج نسخه تهیه کرده‌ام؛ ابتدا بر روی هر کدام از نسخه‌ها که فکر می‌کنید برای شما مناسب است کلیک کنید:</li>
 </ul>
 
 <p><strong><a href="https://calendar.google.com/calendar/embed?src=2fbipn4ked5p9h7jrjpjjj8qn4%40group.calendar.google.com&amp;ctz=Asia%2FTehran" target="_blank">تقویم کامل سال ۱۳۹۹ (شامل روز هفته، روز، ماه و سال)</a></strong>، مثال: جمعه ۱ فروردین ۱۳۹۹</p>
