--- a/job-class-cannot-be-NULL-رفع-خطای/index.html
+++ b/job-class-cannot-be-NULL-رفع-خطای/index.html
@@ -145,7 +145,7 @@
     <textarea rows="4" required="required" name="fields[msg]"></textarea>
     <input type="submit" value="ارسال نظر" />
    </form>
-  </div><div class="pagination"><span class="pagination-nonlink half-width"> ‌ </span><a href="http://asadiweb.ir/%D8%AA%D9%88%DB%8C%DB%8C%D8%AA%D8%B1-%D8%A8%D8%AF%D9%88%D9%86-%D9%81%DB%8C%D9%84%D8%AA%D8%B1/" class="half-width" title="تبدیل لیست توییتر به یک صفحه HTML">تبدیل لیست توییتر به یک صفحه HTML ←</a></div>
+  </div><div class="pagination"><a href="http://asadiweb.ir/clippy-%D8%A8%D8%B1%D8%A7%DB%8C-%D9%85%D8%B1%D9%88%D8%B1%DA%AF%D8%B1/" class="half-width" title="بازگشت دستیار آفیس 2003؛ این گیره‌ی کاغذ دوست‌داشتنی!">→ بازگشت دستیار آفیس 2003؛ این گیره‌ی کاغذ دوست‌داشتنی!</a><a href="http://asadiweb.ir/%D8%AA%D9%88%DB%8C%DB%8C%D8%AA%D8%B1-%D8%A8%D8%AF%D9%88%D9%86-%D9%81%DB%8C%D9%84%D8%AA%D8%B1/" class="half-width" title="تبدیل لیست توییتر به یک صفحه HTML">تبدیل لیست توییتر به یک صفحه HTML ←</a></div>
   <script>
   document.getElementById("hidden-useragent").value=navigator.userAgent;
   if(getParameterByName("sendComment") == "true"){
