--- a/clippy-برای-مرورگر/index.html
+++ b/clippy-برای-مرورگر/index.html
@@ -149,7 +149,7 @@
     <textarea rows="4" required="required" name="fields[msg]"></textarea>
     <input type="submit" value="ارسال نظر" />
    </form>
-  </div><div class="pagination"><span class="pagination-nonlink half-width"> ‌ </span><a href="http://asadiweb.ir/job-class-cannot-be-NULL-%D8%B1%D9%81%D8%B9-%D8%AE%D8%B7%D8%A7%DB%8C/" class="half-width" title="رفع خطای ORA-2745 job class cannot be NULL">رفع خطای ORA-2745 job class cannot be NULL ←</a></div>
+  </div><div class="pagination"><a href="http://asadiweb.ir/%D9%85%DB%8C%D9%86%DB%8C%D9%85%D8%A7%D9%84%DB%8C%D8%B3%D9%85-%D8%AF%DB%8C%D8%AC%DB%8C%D8%AA%D8%A7%D9%84/" class="half-width" title="معرفی کتاب مینیمالیسم دیجیتال اثر کارل نیوپورت">→ معرفی کتاب مینیمالیسم دیجیتال اثر کارل نیوپورت</a><a href="http://asadiweb.ir/job-class-cannot-be-NULL-%D8%B1%D9%81%D8%B9-%D8%AE%D8%B7%D8%A7%DB%8C/" class="half-width" title="رفع خطای ORA-2745 job class cannot be NULL">رفع خطای ORA-2745 job class cannot be NULL ←</a></div>
   <script>
   document.getElementById("hidden-useragent").value=navigator.userAgent;
   if(getParameterByName("sendComment") == "true"){
